# Intelligent-Customer-Service

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  architecture.md  delivery-guide.md  interview-demo.md  operation-guide.md  tool-calling-flow.md
scripts/: init_db.py
src/intelligent_customer_service/: __init__.py  agent.py  api.py  cli.py  config.py  database.py  db.py  llm_client.py  repositories.py  schemas.py  tools.py
src/intelligent_customer_service/static/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_config.py  test_database.py  test_docs.py  test_frontend.py  test_repositories.py  test_schemas.py  test_tools.py
